# trabalho1-rag-puc-minas-2025

./: .gitignore  README.MD  main.py  pycheck.sh  pylint3.rc  pyproject.toml  requirements.txt
pocs/: add_new_doc_strings_python_file.py  extract_code_and_doc_string.py  extract_individual_nodes.py  reconstruct_python_file.py  remove_doc_strings_python_file.py
slides/: 2025-03-10-RAG_e_ArvoreSintatica_Dickson.pptx
src/: main.py  main_original.py
src/utils/: chunk_processing.py  concrete_syntax_tree_parsing.py  custom_logging.py  embeddings_processing.py  indexing.py  llm_connection.py  pdf_processing.py  query_processing.py  repository_processing.py
